<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RPN Calculator</string>
    <string name="zero">0</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEnter">Enter</string>
    <string name="buttonProgram">PROG</string>
    <string name="buttonExecute">EEX</string>
    <string name="buttonStore">STO</string>
    <string name="buttonRecall">RCL</string>
    <string name="buttonUndo">UNDO</string>
    <string name="buttonRedo">REDO</string>
    <string name="buttonSwap">SWAP</string>
    <string name="buttonDrop">DROP</string>
    <string name="buttonBack">BACK</string>
    <string name="buttonChangeSign">CHS</string>
    <string name="emptyString"></string>
    <string name="buttonSine">SIN</string>
    <string name="buttonCosine">COS</string>
    <string name="buttonTangent">TAN</string>
    <string name="buttonInverse">INV</string>
    <string name="buttonDeg">DEG</string>
    <string name="buttonRad">RAD</string>
</resources>
