<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/functionPad"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:orientation="vertical">
    <LinearLayout
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:orientation="vertical">
        <LinearLayout
                android:id="@+id/row03"
                android:layout_width="match_parent"
                android:layout_weight=".1"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/txtDisplayDegRad"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"/>
            <TextView
                    android:id="@+id/txtDisplayInv"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/txtDisplayDisplaySth"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"/>
            <TextView
                    android:id="@+id/txtDisplayState"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/row01"
                android:layout_width="match_parent"
                android:layout_weight=".70"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/txtDisplayValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/zero"
                    android:textSize="40sp"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/row02"
                android:layout_width="match_parent"
                android:layout_weight=".20"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/txtDisplayStack4"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"/>
            <TextView
                    android:id="@+id/txtDisplayStack3"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/txtDisplayStack2"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/txtDisplayStack1"
                    android:layout_width="match_parent"
                    android:layout_weight=".25"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/emptyString"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10">

        <Button
                android:id="@+id/buttonProgram"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonProgram"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonExecute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonExecute"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonStore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonStore"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonRecall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonRecall"
                android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10">

        <Button
                android:id="@+id/buttonUndo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonUndo"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonRedo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonRedo"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonSwap"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonSwap"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonDrop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonDrop"
                android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10">

        <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonBack"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonChangeSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonChangeSign"
                android:textSize="20sp"/>

        <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonDivide"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonMultiply"
                android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10">

        <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/button7"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/button8"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/button9"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonSubtract"
                android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".10">

        <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/button4"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/button5"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/button6"
                android:textSize="25sp"/>

        <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonAdd"
                android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:baselineAligned="false">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".50"
                    android:textSize="25sp">

                <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".33"
                        android:text="@string/button1"
                        android:textSize="25sp"/>

                <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".33"
                        android:text="@string/button2"
                        android:textSize="25sp"/>

                <Button
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".33"
                        android:text="@string/button3"
                        android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".50">

                <Button
                        android:id="@+id/button0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".66"
                        android:text="@string/button0"
                        android:textSize="25sp"/>

                <Button
                        android:id="@+id/buttonDecimalPoint"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".33"
                        android:text="@string/buttonDecimalPoint"
                        android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:id="@+id/buttonEnter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:text="@string/buttonEnter"
                android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>

